# rust-transformer

./: .dockerignore  .tmp-commit-msg  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-secure.sh
src/: lib.rs  main.rs
src/attention/: mod.rs  multi_head.rs  scaled_dot_product.rs
src/layers/: decoder.rs  encoder.rs  feed_forward.rs  layer_norm.rs  mod.rs  positional_encoding.rs
src/models/: decoder.rs  encoder.rs  mod.rs  transformer.rs
src/temporal/: memory_bank.rs  mod.rs  temporal_attention.rs  temporal_encoder.rs
src/utils/: activation.rs  mask.rs  mod.rs  tensor_ops.rs
