[package]
name = "rust-transformer"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "A Transformer implementation in Rust for learning purposes"
license = "MIT"
repository = "https://github.com/tzervas/rust-transformer"

[dependencies]
nalgebra = "0.33"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
